--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "@techstark/opencv-js": "4.9.0-release.3"
+  },
   "devDependencies": {
+    "@vitejs/plugin-basic-ssl": "^2.0.0",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   }
