--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
-    "build": "tsc && vite build",
+    "postinstall": "pnpm prepare-references",
+    "dev": "pnpm prepare-references && vite --host",
+    "build": "tsc && pnpm prepare-references && vite build",
+    "prepare-references": "node scripts/prepare-references.js",
     "preview": "vite preview"
   },
   "dependencies": {
     "@techstark/opencv-js": "4.9.0-release.3",
-    "stats.js": "^0.17.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "stats.js": "^0.17.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.17",
     "@types/stats.js": "^0.17.4",
     "@vitejs/plugin-basic-ssl": "^2.0.0",
+    "sharp": "^0.34.2",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   }
